# Test_AI_Agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  run_demo.py
.claude/commands/: sync-knowledge.md
config/: agent_file_storage_policy.json  credentials.example.json  knowledge_sources.example.json  test_environment.example.json
docs/: AI测试框架接口测试能力提升梳理.md  AI测试框架整体方案.md  AI测试流程Agent职责分工与边界说明.md  AI测试流程领导汇报说明.md  Agent3接口详情获取逻辑修正说明.md  接口获取Agent知识库设计说明.md
examples/apis/: sample_openapi.json
examples/requirements/: sample_requirement.md
knowledge_base/: README.md  registry.example.json
knowledge_base/_schemas/: apifox_project.schema.json  automation_context.schema.json  change_set.schema.json  (+1 more)
prompts/: api_mapper.md  automation_engineer.md  requirement_analyst.md  testcase_designer.md
roles/: api_mapper_agent.md  automation_agent.md  requirement_agent.md  testcase_agent.md
schemas/: automation_plan.schema.json  endpoint_mapping.schema.json  execution_report.schema.json  requirement_model.schema.json  test_cases.schema.json
scripts/: regenerate_api_chunks_utf8.py  sync_knowledge.py
tests/: test_agent3_incomplete_interface_responsibility.py  test_agent_role_profiles.py  test_apifox_platform.py  test_base_agent.py  test_cart_pipeline_agents.py  test_cli.py  test_fallback_templates.py  test_knowledge_sync.py  test_llm_backend.py  test_orchestrator_apifox_source.py  test_orchestrator_stage_gates.py  test_pipeline_demo.py  test_platform_credentials.py  test_prompt_builder.py  test_prompt_registry.py  test_schema_registry.py
(+48 files in other folders)
