[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-api-testing-pipeline"
version = "0.1.0"
description = "MVP scaffold for a document-driven AI multi-agent API testing pipeline"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
